# fleetterm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/fleetd/: Cargo.toml
crates/fleetd/examples/: claudecap.rs  claudedemo.rs  griddump.rs  pipeline.rs  seed.rs  watch.rs
crates/fleetd/src/: claude.rs  daemon.rs  framed.rs  hooks.rs  lib.rs  main.rs  osc.rs  pty.rs  registry.rs  server.rs  shellinit.rs  tools.rs
crates/fleetd/tests/: governance_loop.rs
crates/fleetterm/: Cargo.toml
crates/fleetterm-hook/: Cargo.toml
crates/fleetterm-hook/src/: main.rs
crates/fleetterm/src/: client.rs  main.rs  terminal.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs  safety.rs
docs/: terminal-element-design.md
