[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["FleetTerm"]
repository = "https://github.com/xthakila/fleetterm"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "process", "time", "signal"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# the local protocol crate, referenced by the others
protocol = { path = "crates/protocol" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
